--- a/bed_availabilities/pubspec.yaml
+++ b/bed_availabilities/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.0
+  equatable: ^2.0.3
+  animated_background: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -51,6 +54,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/data.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
